// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGeneric mounts correctly 1`] = `
<div class="input floating-label">
  <div class="position-relative"><input aria-describedby="firstname-describe " name="firstname" id="firstname" minlength="0" placeholder=" " aria-labelledby="label-firstname" aria-invalid="false" aria-required="true" class=""> <label id="label-firstname" for="firstname">First name</label></div>
  <!---->
  <!---->
</div>
`;

exports[`InputGeneric prints error message 1`] = `
<div class="input floating-label">
  <div class="position-relative"><input aria-describedby="firstname-describe " name="firstname" id="firstname" minlength="0" placeholder=" " aria-labelledby="label-firstname" aria-invalid="false" aria-required="true" class="border-danger"> <label id="label-firstname" for="firstname">First name</label></div>
  <!---->
  <div><span id="firstname-describe" class="help m-0   d-inline-block">Generic error message</span></div>
</div>
`;

exports[`InputGeneric prints the floating label classes if user types a value 1`] = `
<div class="input floating-label floating-label-floated">
  <div class="position-relative"><input aria-describedby="firstname-describe " name="firstname" id="firstname" minlength="0" placeholder=" " aria-labelledby="label-firstname" aria-invalid="false" aria-required="true" class=""> <label id="label-firstname" for="firstname">First name</label></div>
  <!---->
  <!---->
</div>
`;
